<resources>
    <string name="app_name">METa MAX pkr</string>
    <string name="accessibility_service_description">This is accessibility services onfiguration</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="minimun_order_price">Minimun Order Price</string>
    <string name="security_code">Security Code</string>
    <string name="start_bot">Start Bot</string>
    <string name="go_to_screen_capture_control">Go To Screen Capture Control</string>
    <string name="stop">STOP</string>
    <string name="user_registration">User Registration</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="coinglobal_account_uid">CoinGlobal Account uid</string>
    <string name="coin_global_security_code">Coin global security code</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="login">Login</string>
    <string name="selected_user_none">Selected User: None</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="revoke_permission">Revoke Permission</string>
    <string name="phone_number">Phone Number</string>
    <string name="manage_user_permissions">Manage User Permissions</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="minimum_order_price">Minimum order price\n</string>
    <string name="search_user_hint">Search users with username,email or uid</string>
    <string name="search">search_button\n\n</string>
    <string name="about_software_engineer">I am a dedicated software engineer specializing in creating efficient, scalable, and user-friendly applications. With a strong background in programming and problem-solving, I am passionate about leveraging technology to build innovative solutions. My expertise spans multiple programming languages and development frameworks, enabling me to tackle a wide range of technical challenges and contribute effectively to team projects. Committed to continuous learning, I stay updated on industry trends to ensure high-quality, future-ready solutions.</string>
</resources>