<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Title -->
    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_registration"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_gravity="center" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Email Field -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- phone Field -->
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Security Code Field -->
    <EditText
        android:id="@+id/editTextSecurityCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coin_global_security_code"
        android:inputType="number"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- uid -->
    <EditText
        android:id="@+id/editTextUid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coinglobal_account_uid"
        android:inputType="number"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />


    <!-- Password Field -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:padding="12dp"
        android:textColor="#FFF"
        android:backgroundTint="#6200EE"
        android:layout_marginTop="24dp" />

</LinearLayout>
